# threed_from_scratch

./: Cargo.toml  rustfmt.tml  rustfmt.toml
src/: buffer_utils.rs  camera.rs  clipping.rs  color.rs  color_buffer.rs  display.rs  instance.rs  light_source.rs  main.rs  matrix.rs  mesh.rs  point.rs  projection.rs  render.rs  shading.rs  texture.rs  triangle.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs  z_buffer.rs
src/render/: split_triangle.rs
