[package]
name = "threed_from_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.10"
sdl3 = {version = "0.14.14"}

[profile.dev]
opt-level = 0      # Ensures no optimization (debug-friendly)
debug = true       # Include debug info
